# LayerLens

./: .gitignore  CHANGELOG.md  COLAB_TROUBLESHOOT.md  CONTRIBUTING.md  ELEVATED_PERFORMANCE_RESULTS.md  EVALUATION_CRITERIA_AND_GOALS.md  FINAL_TEST_RESULTS.md  FIXES_AND_RESULTS.md  ISSUES_ANALYSIS.md  LICENSE  OPTIMIZATION_RESULTS.md  PERFORMANCE_TARGETS.md  README.md  REAL_MODEL_TEST_RESULTS.md  TASK_PERFORMANCE_VALIDATION.md  TEST_RESULTS_SUMMARY.md  USAGE.md  VALIDATION_RESULTS.md  demo_real_model.py  demo_yolo_model.py  llm_yolo_pipeline.py  pyproject.toml  pyrightconfig.json  requirements.txt
demos/: README.md  demo_bert.py  demo_yolo.py  llm_yolo_pipeline.py
docs/: ERROR_HANDLING.md  TROUBLESHOOTING.md  VALIDATION_GOALS.md  usage.md
experiments/: README.md  fine_tuning_experiment.py  test_configurations.py
hyperlora/: __init__.py  config.py
hyperlora/cli/: __init__.py  apply_manifest.py  pipeline.py
hyperlora/config/: optimization.py  profiling.py
hyperlora/features/: __init__.py  feature_engineering.py
hyperlora/meta/: __init__.py  model_description.py
hyperlora/optimization/: __init__.py  _solver.c  _solver.cp311-win_amd64.pyd  _solver.pxd  _solver.pyx  solver.py
hyperlora/pipeline/: full_pipeline.py
hyperlora/profiling/: __init__.py  _aggregators.c  _aggregators.cp311-win_amd64.pyd  _aggregators.pyi  _aggregators.pyx  _batch.c  _batch.cp311-win_amd64.pyd  _batch.pyx  aggregators.py  analyzers.py
hyperlora/validation/: __init__.py  method_validator.py  rank_validator.py  results_validator.py  utility_validator.py
layerlens/: __init__.py  exceptions.py  py.typed
layerlens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
layerlens/cli/: __init__.py
layerlens/config/: __init__.py  latency.py  optimization.py  profiling.py
layerlens/features/: feature_engineering.py
layerlens/models/: __init__.py
layerlens/optimization/: solver.py
layerlens/output/: __init__.py  manifest.py
layerlens/pipeline/: __init__.py  full_pipeline.py
layerlens/profiling/: _aggregators.pxd  _batch.pxd  aggregators.py  analyzers.py
layerlens/utils/: __init__.py  logging.py  validation.py
layerlens/validation/: rank_validator.py  results_validator.py  utility_validator.py
notebooks/: README.md  colab_quick_start.ipynb
output/: bert-base-uncased_plan.json  fine_tuning_results.json  test-model_plan.json  test_results.json
scripts/: README.md  validate.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline_e2e.py
tests/unit/: __init__.py  test_optimization_solver.py  test_profiling_aggregators.py  test_profiling_analyzers.py
