[build-system]
requires = ["setuptools>=65", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "layerlens"
version = "0.1.0"
description = "LayerLens - Adaptive Low-Rank Adaptation Selector"
authors = [{ name = "LayerLens Team" }]
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "scipy>=1.10.0"]
[project.optional-dependencies]
demo = ["transformers>=4.20.0", "torch>=2.0.0"]
yolo = ["ultralytics>=8.0.0", "torch>=2.0.0", "torchvision>=0.15.0"]
pipeline = ["transformers>=4.20.0", "torch>=2.0.0", "torchvision>=0.15.0", "pillow>=9.0.0", "ultralytics>=8.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-mock>=3.10.0"]

[tool.setuptools]
# Use find_packages to automatically discover all packages
# This ensures all subpackages are included, including 'output'
packages = { find = {} }

[[tool.setuptools.ext-modules]]
name = "layerlens.profiling._aggregators"
sources = ["layerlens/profiling/_aggregators.pyx"]
language = "c"

[[tool.setuptools.ext-modules]]
name = "layerlens.profiling._batch"
sources = ["layerlens/profiling/_batch.pyx"]
language = "c"

[[tool.setuptools.ext-modules]]
name = "layerlens.optimization._solver"
sources = ["layerlens/optimization/_solver.pyx"]
language = "c"

[tool.cython]
language_level = 3

[tool.pyright]
include = ["layerlens", "scripts", "demos", "experiments", "tests"]
exclude = ["**/__pycache__", "**/node_modules", "**/.git", "**/build", "**/dist", "**/*.egg-info"]
reportMissingImports = "warning"
reportMissingTypeStubs = false
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"
venvPath = "."
venv = "."

